--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.2.2",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
+    "i18next": "^23.10.1",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
